--- a/docs/docs/assets/invariant.css
+++ b/docs/docs/assets/invariant.css
@@ -125,6 +125,10 @@ div.subtitle {
     margin-bottom: 20pt;
 }
 
+.md-footer {
+    margin-top: 220pt;
+}
+
 .md-footer-invariant {
     display: flex;
     flex-direction: row;
@@ -142,4 +146,74 @@ div.subtitle {
     margin-left: 5pt;
     color: grey;
     opacity: 0.7;
+}
+
+img.inline-invariant {
+    width: 15pt;
+    position: relative;
+    top: 0.2em;
+    margin-left: 0.1em;
+}
+
+.tiles {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 20pt;
+    margin: -10pt;
+}
+
+a.tile {
+    display: inline-block;
+    flex: 1;
+    min-width: 228pt;
+    background-color: rgb(239, 239, 239);
+    border-radius: 5pt;
+    padding: 10pt;
+    margin: 10pt;
+    transition: background-color 0.2s;
+}
+
+a.tile:hover {
+    text-decoration: none;
+    background-color: rgb(225, 225, 225);
+}
+
+a.tile span {
+    display: block;
+    margin-top: 5pt;
+    color: #3A3E60;
+}
+
+a.tile span:nth-child(2) {
+    font-size: 12pt;
+    font-weight: 500;
+    opacity: 0.8;
+}
+
+.spacer {
+    height: 220pt;
+}
+
+strong {
+    font-weight: 600 !important;
+    font-family: NeueMontreal, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+blockquote {
+    background-color: #fdfdfd;
+    border-left: 0.5pt solid #3E3AFF !important;
+    border-radius: 5pt;
+    font-size: 12pt;
+    border: 1pt solid #3E3AFF;
+    color: black;
+}
+
+blockquote pre {
+    position: relative;
+    margin-left: -9.5pt;
+}
+
+blockquote p {
+    font-size: 12pt !important;
+    color: #3A3E60;
 }
